@@ -1,5 +1,6 @@
-#' Create a progress bar with estimated time.
+#' @title Create a progress bar with estimated time.
 #'
+#' @description
 #' Create a progress bar function that displays the estimated time till
 #' completion and optional messages. Call the returned functions \code{set} or
 #' \code{inc} during a loop to change the display.
@@ -7,11 +8,18 @@
 #' If you call these function without setting any of the arguments
 #' the bar is simply redrawn with the current value.
 #' For errorhandling use \code{error} and have a look at the example below.
+#'
 #' You can globally change the behavior of all bars by setting the option
 #' \code{options(BBmisc.ProgressBar.style)} either to \dQuote{text} (the default)
 #' or \dQuote{off}, which display no bars at all.
+#'
 #' You can globally change the width of all bars by setting the option
 #' \code{options(BBmisc.ProgressBar.width)}. By default this is \code{getOption("width")}.
+#'
+#' You can globally set the stream where the output of the bar is directed by setting the option
+#' \code{options(BBmisc.ProgressBar.stream)} either to \dQuote{stderr} (the default)
+#' or \dQuote{stdout}. Note that using the latter will result in the bar being shown in
+#' reports generated by Sweave or knitr, what you probably do not want.
 #'
 #' @param min [\code{numeric(1)}]\cr
 #'   Minimum value, default is 0.
@@ -27,19 +35,19 @@
 #'   A single character used to display progress in the bar.
 #'   Default is \sQuote{+}.
 #' @return [\code{\link{ProgressBar}}]. A list with following functions:
-#'   \item{set [\code{function(value, msg=label)}]}{Set the bar to a value and possibly display a message instead of the label.}
-#'   \item{inc [\code{function(value, msg=label)}]}{Increase the bar and possibly display a message instead of the label.}
-#'   \item{kill [\code{function(clear=FALSE)}]}{Kill the bar so it cannot be used anymore. Cursor is moved to new line. You can also erase its display.}
+#'   \item{set [\code{function(value, msg = label)}]}{Set the bar to a value and possibly display a message instead of the label.}
+#'   \item{inc [\code{function(value, msg = label)}]}{Increase the bar and possibly display a message instead of the label.}
+#'   \item{kill [\code{function(clear = FALSE)}]}{Kill the bar so it cannot be used anymore. Cursor is moved to new line. You can also erase its display.}
 #'   \item{error [\code{function(e)}]}{Useful in \code{tryCatch} to properly display error messages below the bar. See the example.}
 #' @export
 #' @aliases ProgressBar
 #' @examples
-#' bar = makeProgressBar(max=5, label="test-bar")
+#' bar = makeProgressBar(max = 5, label = "test-bar")
 #' for (i in 0:5) {
 #'   bar$set(i)
 #'   Sys.sleep(0.2)
 #' }
-#' bar = makeProgressBar(max=5, label="test-bar")
+#' bar = makeProgressBar(max = 5, label = "test-bar")
 #' for (i in 1:5) {
 #'   bar$inc(1)
 #'   Sys.sleep(0.2)
@@ -47,29 +55,38 @@
 #' # display errors properly (in next line)
 #' \dontrun{
 #' f = function(i) if (i>2) stop("foo")
-#' bar = makeProgressBar(max=5, label="test-bar")
+#' bar = makeProgressBar(max = 5, label = "test-bar")
 #' for (i in 1:5) {
 #'   tryCatch ({
 #'     f(i)
 #'     bar$set(i)
-#'   }, error=bar$error)
+#'   }, error = bar$error)
 #' }
 #' }
-makeProgressBar = function(min=0, max=100, label="", char="+") {
-  checkArg(min, "numeric", len=1L, na.ok=FALSE)
-  checkArg(max, "numeric", len=1L, na.ok=FALSE)
-  checkArg(label, "character", len=1L, na.ok=FALSE)
+makeProgressBar = function(min = 0, max = 100, label = "", char = "+") {
+  checkArg(min, "numeric", len = 1L, na.ok = FALSE)
+  checkArg(max, "numeric", len = 1L, na.ok = FALSE)
+  checkArg(label, "character", len = 1L, na.ok = FALSE)
 
   style = getOption("BBmisc.ProgressBar.style", "text")
   if (!is.character(style) || length(style) > 1L || !(style %in% c("text", "off")))
     stop("BBmisc.ProgressBar.style option must be one of: 'text', 'off'!")
   if (style == "off")
     return(structure(list(
-      set = function(value, msg=label) invisible(NULL),
-      inc = function(inc, msg=label) invisible(NULL),
-      kill =  function(clear=FALSE) invisible(NULL),
+      set = function(value, msg = label) invisible(NULL),
+      inc = function(inc, msg = label) invisible(NULL),
+      kill =  function(clear = FALSE) invisible(NULL),
       error = function(e) stop(e)
     ), class = "ProgressBar"))
+
+  stream = getOption("BBmisc.ProgressBar.stream", "stderr")
+  if (!is.character(stream) || length(stream) > 1L || !(stream %in% c("stderr", "stdout")))
+    stop("BBmisc.ProgressBar.stream option must be one of: 'stderr', 'stdout'!")
+  mycat = if (stream == "stdout")
+    function(...) cat(...)
+  else
+    function(...) cat(..., file = stderr())
+
   width = getOption("BBmisc.ProgressBar.width", getOption("width"))
   width = convertInteger(width)
   if (!is.integer(width) || length(width) != 1 || is.na(width) || width <= 0L || width < 30L)
@@ -90,9 +107,9 @@ makeProgressBar = function(min=0, max=100, label="", char="+") {
     if (!missing(value) && !missing(inc))
       stop("You must not set value and inc!")
     else if (!missing(value))
-      checkArg(value, "numeric", len=1L, na.ok=FALSE, lower=max(min,cur.value), upper=max)
+      checkArg(value, "numeric", len = 1L, na.ok = FALSE, lower = max(min,cur.value), upper = max)
     else if (!missing(inc)) {
-      checkArg(inc, "numeric", len=1L, na.ok=FALSE, lower=0, upper=max-cur.value)
+      checkArg(inc, "numeric", len = 1L, na.ok = FALSE, lower = 0, upper = max-cur.value)
       value = cur.value + inc
     } else {
       value = cur.value
@@ -111,39 +128,38 @@ makeProgressBar = function(min=0, max=100, label="", char="+") {
       else
         rest.time = (max - value) * (delta.time / (value - min))
       rest.time = splitTime(rest.time, "hours")
-      # as a precaution, so we can _always_ print in the progress barcat
+      # as a precaution, so we can _always_ print in the progress bar cat
       if (rest.time["hours"] > 99)
         rest.time[] = 99
-      cat(kill.line)
+      mycat(kill.line)
       msg = sprintf(sprintf("%%%is", label.width), msg)
-      catf("%s |%s| %3i%% (%02i:%02i:%02i)", newline=FALSE,
-           msg, collapse(bar, sep=""), round(rate*100),
-           rest.time["hours"], rest.time["minutes"], rest.time["seconds"])
+      mycat(sprintf("%s |%s| %3i%% (%02i:%02i:%02i)", msg, collapse(bar, sep = ""), round(rate*100),
+           rest.time["hours"], rest.time["minutes"], rest.time["seconds"]))
       if (value == max)
         kill()
       flush.console()
     }
     cur.value <<- value
   }
-  clear = function(newline=TRUE) {
-    cat(kill.line)
-    cat(rep(" ", width))
+  clear = function(newline = TRUE) {
+    mycat(kill.line)
+    mycat(rep(" ", width))
     if (newline)
-      cat("\n")
+      mycat("\n")
   }
-  kill = function(clear=FALSE) {
+  kill = function(clear = FALSE) {
     if (clear)
-      clear(newline=TRUE)
+      clear(newline = TRUE)
     else
-      cat("\n")
+      mycat("\n")
     killed <<- TRUE
   }
-  makeS3Obj("ProgressBar", 
-    set = function(value, msg=label) draw(value=value, msg=msg),
-    inc = function(inc, msg=label) draw(inc=inc, msg=msg),
+  makeS3Obj("ProgressBar",
+    set = function(value, msg = label) draw(value = value, msg = msg),
+    inc = function(inc, msg = label) draw(inc = inc, msg = msg),
     kill = kill,
     error = function(e) {
-      kill(clear=FALSE)
+      kill(clear = FALSE)
       stop(e)
     }
   )
