@@ -25,14 +25,14 @@ makeProgressBar(min = 0, max = 100, label = "", char = "+")
 }
 \value{
 [\code{\link{ProgressBar}}]. A list with following
-functions: \item{set [\code{function(value,
-msg=label)}]}{Set the bar to a value and possibly display a
+functions: \item{set [\code{function(value, msg =
+label)}]}{Set the bar to a value and possibly display a
 message instead of the label.} \item{inc
-[\code{function(value, msg=label)}]}{Increase the bar and
+[\code{function(value, msg = label)}]}{Increase the bar and
 possibly display a message instead of the label.}
-\item{kill [\code{function(clear=FALSE)}]}{Kill the bar so
-it cannot be used anymore. Cursor is moved to new line. You
-can also erase its display.} \item{error
+\item{kill [\code{function(clear = FALSE)}]}{Kill the bar
+so it cannot be used anymore. Cursor is moved to new line.
+You can also erase its display.} \item{error
 [\code{function(e)}]}{Useful in \code{tryCatch} to properly
 display error messages below the bar. See the example.}
 }
@@ -44,22 +44,32 @@ to change the display. Note that you are not allowed to
 decrease the value of the bar. If you call these function
 without setting any of the arguments the bar is simply
 redrawn with the current value. For errorhandling use
-\code{error} and have a look at the example below. You can
-globally change the behavior of all bars by setting the
-option \code{options(BBmisc.ProgressBar.style)} either to
-\dQuote{text} (the default) or \dQuote{off}, which display
-no bars at all. You can globally change the width of all
-bars by setting the option
-\code{options(BBmisc.ProgressBar.width)}. By default this
-is \code{getOption("width")}.
+\code{error} and have a look at the example below.
+
+You can globally change the behavior of all bars by setting
+the option \code{options(BBmisc.ProgressBar.style)} either
+to \dQuote{text} (the default) or \dQuote{off}, which
+display no bars at all.
+
+You can globally change the width of all bars by setting
+the option \code{options(BBmisc.ProgressBar.width)}. By
+default this is \code{getOption("width")}.
+
+You can globally set the stream where the output of the bar
+is directed by setting the option
+\code{options(BBmisc.ProgressBar.stream)} either to
+\dQuote{stderr} (the default) or \dQuote{stdout}. Note that
+using the latter will result in the bar being shown in
+reports generated by Sweave or knitr, what you probably do
+not want.
 }
 \examples{
-bar = makeProgressBar(max=5, label="test-bar")
+bar = makeProgressBar(max = 5, label = "test-bar")
 for (i in 0:5) {
   bar$set(i)
   Sys.sleep(0.2)
 }
-bar = makeProgressBar(max=5, label="test-bar")
+bar = makeProgressBar(max = 5, label = "test-bar")
 for (i in 1:5) {
   bar$inc(1)
   Sys.sleep(0.2)
@@ -67,12 +77,12 @@ for (i in 1:5) {
 # display errors properly (in next line)
 \dontrun{
 f = function(i) if (i>2) stop("foo")
-bar = makeProgressBar(max=5, label="test-bar")
+bar = makeProgressBar(max = 5, label = "test-bar")
 for (i in 1:5) {
   tryCatch ({
     f(i)
     bar$set(i)
-  }, error=bar$error)
+  }, error = bar$error)
 }
 }
 }
