@@ -1,4 +1,5 @@
 BBmisc_1.6:
+- the ProgressBar now outputs to stderr by default. But the steam can be configured.
 - improve handling of result names (row.names and col.names) in some functions a bit
 - convertRowsToList now converts matrices into list of vector by default (see new arg "as.vector")
 - rename first, last to which.first, which.last
